# yourcast-mvp

./: .gitignore  DATABASE_SETUP.md  DEV_GUIDE.md  README.md  RSS_CATEGORIZATION_IMPROVEMENTS.md  SETUP.md  clear_redis.sh  deploy.sh  package-lock.json  package.json  start.sh  stop.sh  test_podcast_generation.py  turbo.json
apps/api/: Dockerfile  fly.toml  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: episodes.py
apps/api/app/database/: connection.py
apps/api/app/models/: __init__.py  article.py  episode.py  episode_segment.py  source.py  user.py  (+1 more)
apps/web/: next.config.js  package.json  tsconfig.json  vercel.json
database/: fix_sources_schema.sql  fix_sources_with_uuidv7.sql  schema.sql
scripts/: add_importance_score.py  setup_postgres.py
workers/agent/: .env.example  Dockerfile  README.md  clear_database.py  fly.toml  pyproject.toml  redis_worker.py  run_full_discovery.py  test_discovery.py  test_episode_fix.py  test_episode_segments.py  test_manual_rss.py  test_rss_simple.py  test_small_discovery.py  test_small_discovery_debug.py  test_smart_article_selection.py  worker.py
workers/agent/agent/: celery_app.py  config.py  rss_config.py  tasks.py
workers/agent/agent/pipeline/: podcast_generator.py
workers/agent/agent/services/: clustering_service.py  embedding_service.py  episode_service.py  llm_service.py  news_service.py  rss_discovery_service.py  smart_article_service.py  storage_service.py  transcript_service.py  tts_service.py
workers/agent/agent/tasks/: __init__.py  rss_tasks.py
workers/agent/agent/utils/: uuid_utils.py
(+15 files in other folders)
